[gd_scene load_steps=10 format=3 uid="uid://ijw5xeul5cse"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_avew1"]
[ext_resource type="Texture2D" uid="uid://bkrn4vx7m5q8p" path="res://assets/card menu background.jpg" id="2_pgi3b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_41cjv"]
texture = ExtResource("2_pgi3b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pebls"]
bg_color = Color(0.627157, 0.469996, 0.064229, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ucnj"]
bg_color = Color(0.945098, 0.721569, 0.176471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udfyd"]
bg_color = Color(0.945098, 0.721569, 0.176471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oegw4"]
bg_color = Color(0.627451, 0.470588, 0.0627451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocw3a"]
bg_color = Color(0.627451, 0.470588, 0.0627451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1ske"]
bg_color = Color(0.627451, 0.470588, 0.0627451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Main" type="Control"]
layout_mode = 3
anchor_left = 1.332
anchor_top = 1.337
anchor_right = 1.332
anchor_bottom = 1.337
offset_left = -1534.46
offset_top = -866.376
offset_right = -382.464
offset_bottom = -218.376
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_avew1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.668
anchor_bottom = 2.66
offset_left = 6.0
offset_top = -1.0
offset_right = -0.536133
offset_bottom = 0.319946
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_41cjv")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1154.0
offset_top = 87.0
offset_right = 1849.0
offset_bottom = 394.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.945098, 0.721569, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 225
text = "CARD GAME HUB"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1534, 867)
zoom = Vector2(0.375, 0.375)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1173.0
offset_top = 81.0
offset_right = 2375.0
offset_bottom = 1212.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Single Player" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_pebls")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ucnj")
theme_override_styles/normal = SubResource("StyleBoxFlat_udfyd")
text = "SINGLE PLAYER"

[node name="Host Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_oegw4")
theme_override_styles/normal = SubResource("StyleBoxFlat_udfyd")
text = "HOST GAME"

[node name="Join Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_ocw3a")
theme_override_styles/normal = SubResource("StyleBoxFlat_udfyd")
text = "JOIN GAME"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_i1ske")
theme_override_styles/normal = SubResource("StyleBoxFlat_udfyd")
text = "EXIT"

[node name="JoinPanel" type="Panel" parent="."]
offset_left = 320.0
offset_top = 672.0
offset_right = 1408.0
offset_bottom = 1256.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="JoinPanel"]
layout_mode = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 968.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 77
text = "Enter Join Code:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Textbox" type="TextEdit" parent="JoinPanel"]
layout_mode = 0
offset_left = 320.0
offset_top = 224.0
offset_right = 768.0
offset_bottom = 328.0
theme_override_font_sizes/font_size = 40
placeholder_text = "Enter code here..."
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="JoinPanel"]
offset_left = 128.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 40
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="JoinButton" type="Button" parent="JoinPanel"]
layout_mode = 0
offset_left = 640.0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 40
text = "Enter"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Single Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Host Game" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Join Game" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="button_down" from="JoinPanel/CloseButton" to="." method="_on_close_button_button_down"]
[connection signal="button_down" from="JoinPanel/JoinButton" to="." method="_on_join_button_button_down"]
